--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import HTML from "@/components/astro/HTML.astro";
-
-export const prerender = true;
+import { App } from "@/components/solid/app";
 ---
 
-<HTML />
+<HTML>
+	<App />
+</HTML>
