--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -52,12 +52,50 @@
 		"Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
 		"Segoe UI Symbol", "Noto Color Emoji";
 
-/* COLORS COLORS COLORS COLORS COLORS COLORS */
+	/* COLORS COLORS COLORS COLORS COLORS COLORS */
 	--color-novo-blue: #001965;
-	--color-white: #FFFFFF;		
+	--color-white: #ffffff;
 	--color-black: #78dcca;
-	--color-blue-grey: #43485C;
-	--color-warm-sand: #D3B276;
-	--color-sky-blue: #B5D5E6;
-	--color-seafoam-green: #6DC28D;
+	--color-blue-grey: #43485c;
+	--color-warm-sand: #d3b276;
+	--color-sky-blue: #b5d5e6;
+	--color-seafoam-green: #6dc28d;
+}
+
+/* HEADLINES */
+.headline-01 {
+	@apply novo-sans font-extralight text-[3rem] tracking-[-2%] md:text-[6rem] md:leading-[95%];
+}
+
+.headline-article {
+	@apply novo-sans font-extralight text-[2rem] leading-[110%] tracking-[-1%] md:text-[3.375rem] md:leading-[105%];
+}
+
+.headline-extralight {
+	@apply novo-sans font-extralight text-[1.75rem] leading-[115%] tracking-[-1%] md:text-[2.625rem];
+}
+
+.headline-semibold {
+	@apply novo-sans font-semibold text-[1.75rem] leading-[115%] tracking-[-1%] md:text-[2.625rem];
+}
+
+.headline-sub {
+	@apply font-extralight text-[1.5rem] leading-[120%] md:text-[2.25rem];
+}
+
+.headline-card {
+	@apply novo-sans text-[1.25rem] leading-[120%] md:text-[1.75rem] md:leading-[110%];
+}
+
+/* PARAGRAPHS */
+.paragraph-article {
+	@apply text-[1rem] leading-[140%] md:text-[1.25rem];
+}
+
+.paragraph-main {
+	@apply text-[1.125rem] leading-[140%];
+}
+
+.quote {
+	@apply novo-sans font-extralight italic text-[novo-blue] text-[1.5rem] leading-[120%] md:text-[2.25rem];
 }
