feature: components (footer, header, buttons, cards

--- a/apps/web/src/components/astro/Header.astro
+++ b/apps/web/src/components/astro/Header.astro
@@ -1,3 +1,14 @@
-<header>
-	<h1 class="text-xl font-sans text-warm-sand">Header</h1>
+---
+
+---
+
+<header class="w-full p-[1rem] md:px-[3rem]">
+	<nav class="flex justify-between items-start">
+		<p class="text-[1.125rem] leading-[90%] text-novo-blue">
+			novo<br /><span class="font-bold">nordisk</span>
+		</p>
+		<button class="font-medium text-[1.125rem] leading-[140%]">
+			Download Report
+		</button>
+	</nav>
 </header>
