--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import HTML from "@/components/astro/HTML.astro";
 import { App } from "@/components/solid/app";
+import Footer from "@/components/astro/Footer.astro";
 ---
 
 <HTML>
 	<App />
+	<Footer />
 </HTML>
