--- a/apps/web/src/components/astro/MainLayout.astro
+++ b/apps/web/src/components/astro/MainLayout.astro
@@ -2,7 +2,8 @@
 
 ---
 
-<main
-	class="grid grid-cols-4 gap-[1rem] mx-[1.5rem] md:grid-cols-12 md:mx-[3rem]"
+<section
+	class="grid grid-cols-4 gap-[1rem] px-[1.5rem] md:grid-cols-12 md:px-[3rem] max-w-[100rem] mx-auto pb-[7.5rem] md:pb-[12.5rem]"
 >
-</main>
+	<slot />
+</section>
