--- a/apps/web/src/components/astro/SecondaryButton.astro
+++ b/apps/web/src/components/astro/SecondaryButton.astro
@@ -1,5 +1,5 @@
 ---
-const { buttonText, link, textColor } = Astro.props;
+const { buttonText, link } = Astro.props;
 ---
 
 <button
@@ -9,8 +9,8 @@ const { buttonText, link, textColor } = Astro.props;
 	<a class="flex items-center gap-[0.5rem]" href={link}>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
-			width="32"
-			height="32"
+			width="20"
+			height="20"
 			viewBox="0 0 24 24"
 			><path fill="currentColor" d="M6.4 18L5 16.6L14.6 7H6V5h12v12h-2V8.4z"
 			></path></svg
