--- a/apps/web/src/components/Footer.astro
+++ b/apps/web/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import type { GLOBAL_SETTINGS_QUERYResult } from "@novo-holdings-annual-report-2024/studio/types";
+import PrimaryButton from "@/components/astro/PrimaryButton.astro";
 
 interface Props {
 	settings: GLOBAL_SETTINGS_QUERYResult;
@@ -9,8 +10,27 @@ const { settings } = Astro.props;
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="w-full py-8 px-6 bg-gray-50 mt-16">
-	<div class="max-w-7xl mx-auto text-center text-gray-600">
-		<p>&copy; {currentYear} {settings?.globalTitle}</p>
+<footer
+	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem]"
+>
+	<div class="max-w-[100rem] flex justify-between items-start">
+		<div class="text-[2rem] md:text-[4rem] leading-[90%]">
+			<p>novo<br /><span class="font-bold">nordisk</span></p>
+		</div>
+		<PrimaryButton buttonText="Back to Main Site" link="/" textColor="white" />
 	</div>
+
+	<nav>
+		<ul
+			class="max-w-[100rem] grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
+		>
+			<li>Privacy notice</li>
+			<li>Code of Conduct</li>
+			<li>Whistleblower</li>
+			<li>Articles of association</li>
+			<li>Policy on data ethics</li>
+			<li>Electronic invoicing</li>
+			<li>Diversity policy</li>
+		</ul>
+	</nav>
 </footer>
