--- a/apps/web/src/pages/[slug].astro
+++ b/apps/web/src/pages/[slug].astro
@@ -7,6 +7,18 @@ import HeroModule from "../components/modules/HeroModule.astro";
 import ImageModule from "../components/modules/ImageModule.astro";
 import TextModule from "../components/modules/TextModule.astro";
 import PageLayout from "../layouts/PageLayout.astro";
+import AtAGlanceModule from "../components/modules/AtAGlanceModule.astro";
+import ArticleHeroModule from "../components/modules/ArticleHeroModule.astro";
+import ArticleTextModule from "../components/modules/ArticleTextModule.astro";
+import ArticleQuoteModule from "../components/modules/ArticleQuoteModule.astro";
+import ArticleStatsModule from "../components/modules/ArticleStatsModule.astro";
+import ArticleGalleryModule from "../components/modules/ArticleGalleryModule.astro";
+import ArticleFigureModule from "../components/modules/ArticleFigureModule.astro";
+import ArticleRelatedCasesModule from "../components/modules/ArticleRelatedCasesModule.astro";
+import SideBySideModule from "../components/modules/SideBySideModule.astro";
+import HighlightsModule from "../components/modules/HighlightsModule.astro";
+import NewsModule from "../components/modules/NewsModule.astro";
+import CaseHighlightsModule from "../components/modules/CaseHighlightsModule.astro";
 
 export const getStaticPaths = async () => {
 	const pages = await sanityClient.fetch<PAGES_QUERYResult>(PAGES_QUERY);
@@ -32,6 +44,30 @@ const { page } = Astro.props;
 					return <TextModule {...module} />;
 				case "imageModule":
 					return <ImageModule {...module} />;
+				case "atAGlanceModule":
+					return <AtAGlanceModule {...module} />;
+				case "articleHeroModule":
+					return <ArticleHeroModule {...module} />;
+				case "articleTextModule":
+					return <ArticleTextModule {...module} />;
+				case "articleQuoteModule":
+					return <ArticleQuoteModule {...module} />;
+				// case "articleStatsModule":
+				// 	return <ArticleStatsModule {...module} />;
+				// case "articleGalleryModule":
+				// 	return <ArticleGalleryModule {...module} />;
+				case "articleFigureModule":
+					return <ArticleFigureModule {...module} />;
+				// case "articleRelatedCasesModule":
+				// 	return <ArticleRelatedCasesModule {...module} />;
+				case "sideBySideModule":
+					return <SideBySideModule {...module} />;
+				case "highlightsModule":
+					return <HighlightsModule {...module} />;
+				case "newsModule":
+					return <NewsModule {...module} />;
+				case "caseHighlightsModule":
+					return <CaseHighlightsModule {...module} />;
 				default:
 					return null;
 			}
