--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -88,8 +88,8 @@
 	@apply font-sans text-[1rem] leading-[140%] md:text-[1.25rem];
 }
 
-.paragraph-main {
-	@apply font-sans text-[1.125rem] leading-[140%];
+.paragraph-secondary {
+	@apply font-sans text-[1rem] md:text-[1.125rem] leading-[140%];
 }
 
 .quote {
