--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -1,23 +1,28 @@
 ---
 import PrimaryButton from "@/components/astro/PrimaryButton.astro";
+import type { GLOBAL_SETTINGS_QUERYResult } from "@novo-holdings-annual-report-2024/studio/types";
+
+interface Props {
+	settings: GLOBAL_SETTINGS_QUERYResult;
+}
+
+const { settings } = Astro.props;
+const currentYear = new Date().getFullYear();
 ---
 
 <footer
-	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem]"
+	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem]"
 >
-	<div class="flex justify-between items-start">
+	<div class="max-w-[100rem] flex justify-between items-start">
 		<div class="text-[2rem] md:text-[4rem] leading-[90%]">
 			<p>novo<br /><span class="font-bold">nordisk</span></p>
 		</div>
 		<PrimaryButton buttonText="Back to Main Site" link="/" textColor="white" />
-		<!-- <button class="font-medium text-[1.125rem] leading-[140%]"
-			><img src="" alt="" />Back to Main Site</button
-		> -->
 	</div>
 
 	<nav>
 		<ul
-			class="grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
+			class="max-w-[100rem] grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
 		>
 			<li>Privacy notice</li>
 			<li>Code of Conduct</li>
