--- a/apps/web/src/components/astro/HighlightsCardLarge.astro
+++ b/apps/web/src/components/astro/HighlightsCardLarge.astro
@@ -1,5 +1,5 @@
 ---
-import type { SanityImage as SanityImageType } from "../../scripts/types";
+import type { SanityImageType } from "@/scripts/types";
 import SanityImage from "../SanityImage.astro";
 
 interface Props {
