--- a/apps/web/src/layouts/PageLayout.astro
+++ b/apps/web/src/layouts/PageLayout.astro
@@ -1,10 +1,10 @@
 ---
+import Footer from "@/components/astro/Footer.astro";
+import Header from "@/components/astro/Header.astro";
 import "@/styles/global.css";
 import { GLOBAL_SETTINGS_QUERY } from "@novo-holdings-annual-report-2024/studio/queries";
 import type { GLOBAL_SETTINGS_QUERYResult } from "@novo-holdings-annual-report-2024/studio/types";
 import { sanityClient } from "sanity:client";
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
 
 interface Props {
 	title?: string;
