--- a/apps/web/src/components/modules/AtAGlanceModule.astro
+++ b/apps/web/src/components/modules/AtAGlanceModule.astro
@@ -1,13 +1,12 @@
 ---
+import MainLayout from "@/layouts/MainLayout.astro";
+import SectionLayout from "@/layouts/SectionLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
-import MainLayout from "../astro/MainLayout.astro";
 
 type Props = ModuleProps<"atAGlanceModule">;
-
-const title = "At a glance";
 ---
 
-<section>
+<SectionLayout>
 	<MainLayout>
 		<div class="col-span-4 md:col-span-6">
 			<h2 class="headline-01">Novo Holdings at a Glance</h2>
@@ -21,4 +20,4 @@ const title = "At a glance";
 			<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
 		</section>
 	</MainLayout>
-</section>
+</SectionLayout>
