--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -5,13 +5,10 @@ import type { GLOBAL_SETTINGS_QUERYResult } from "@novo-holdings-annual-report-2
 interface Props {
 	settings: GLOBAL_SETTINGS_QUERYResult;
 }
-
-const { settings } = Astro.props;
-const currentYear = new Date().getFullYear();
 ---
 
 <footer
-	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem]"
+	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem] mt-[7.5rem] md:mt-[12.5rem]"
 >
 	<div class="max-w-[100rem] flex justify-between items-start">
 		<div class="text-[2rem] md:text-[4rem] leading-[90%]">
