--- a/apps/web/src/components/astro/HighlightsModule.astro
+++ b/apps/web/src/components/astro/HighlightsModule.astro
@@ -1,19 +1,19 @@
 ---
-import HighlightsCardSmall from "./HighlightsCardSmall.astro";
+
 ---
 
 <section>
 	<h3 class="headline-extralight pb-[2.5rem]">Explore our Report</h3>
 	<div class="grid grid-cols-4 gap-[1rem] md:grid-cols-12">
 		<slot />
-		<!-- <HighlightsCardSmall
+		<!-- <CaseCard
 			collaborator=""
 			date=""
 			title="Lorem ipsum dolor sit amet"
 			imgSrc="/images/article-1.jpg"
 			imgAlt="Article 1"
 		/>
-		<HighlightsCardSmall
+		<CaseCard
 			collaborator=""
 			date=""
 			title="Lorem ipsum dolor sit amet"
