--- a/apps/web/src/components/modules/ArticleFigureModule.astro
+++ b/apps/web/src/components/modules/ArticleFigureModule.astro
@@ -1,24 +1,27 @@
 ---
+import SanityImage from "@/components/astro/SanityImage.astro";
+import MainLayout from "@/layouts/MainLayout.astro";
+import SectionLayout from "@/layouts/SectionLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
-import SanityImage from "../SanityImage.astro";
-import MainLayout from "../astro/MainLayout.astro";
 
 type Props = ModuleProps<"articleFigureModule">;
 
-const { image, width } = Astro.props;
+const { image } = Astro.props;
 if (!image) return null;
 ---
 
-<MainLayout>
-	<section class="col-span-4 md:col-span-6 md:col-start-4">
-		<div class="overflow-hidden">
-			<SanityImage
-				image={image}
-				alt=""
-				width={1200}
-				class="rounded-[0.5rem] object-cover w-full h-full"
-				sizes="(min-width: 1280px) 1200px, 100vw"
-			/>
-		</div>
-	</section>
-</MainLayout>
+<SectionLayout>
+	<MainLayout>
+		<section class="col-span-4 md:col-span-6 md:col-start-4">
+			<div class="overflow-hidden">
+				<SanityImage
+					image={image}
+					alt=""
+					width={1200}
+					class="rounded-[0.5rem] object-cover w-full h-full"
+					sizes="(min-width: 1280px) 1200px, 100vw"
+				/>
+			</div>
+		</section>
+	</MainLayout>
+</SectionLayout>
