--- a/apps/web/src/components/modules/SideBySideModule.astro
+++ b/apps/web/src/components/modules/SideBySideModule.astro
@@ -1,6 +1,6 @@
 ---
+import MainLayout from "@/layouts/MainLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
-import MainLayout from "../astro/MainLayout.astro";
 import SecondaryButton from "../astro/SecondaryButton.astro";
 
 type Props = ModuleProps<"sideBySideModule">;
