feature: Article layout

--- a/apps/web/src/components/modules/ArticleFigureModule.astro
+++ b/apps/web/src/components/modules/ArticleFigureModule.astro
@@ -1,6 +1,6 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
-import MainLayout from "@/layouts/MainLayout.astro";
+import ArticleLayout from "@/layouts/ArticleLayout.astro";
 import SectionLayout from "@/layouts/SectionLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
 
@@ -11,17 +11,15 @@ if (!image) return null;
 ---
 
 <SectionLayout>
-	<MainLayout>
-		<section class="col-span-4 md:col-span-6 md:col-start-4">
-			<div class="overflow-hidden">
-				<SanityImage
-					image={image}
-					alt=""
-					width={1200}
-					class="rounded-[0.5rem] object-cover w-full h-full"
-					sizes="(min-width: 1280px) 1200px, 100vw"
-				/>
-			</div>
-		</section>
-	</MainLayout>
+	<ArticleLayout>
+		<div class="overflow-hidden">
+			<SanityImage
+				image={image}
+				alt=""
+				width={1200}
+				class="rounded-[0.5rem] object-cover w-full h-full"
+				sizes="(min-width: 1280px) 1200px, 100vw"
+			/>
+		</div>
+	</ArticleLayout>
 </SectionLayout>
