feature: heroCase + article y-gaps

--- a/apps/web/src/layouts/ArticleLayout.astro
+++ b/apps/web/src/layouts/ArticleLayout.astro
@@ -3,7 +3,9 @@ import MainLayout from "./MainLayout.astro";
 ---
 
 <MainLayout>
-	<div class="col-span-full md:col-span-6 md:col-start-4">
+	<div
+		class="col-span-full md:col-span-6 md:col-start-4 mb-[4rem] md:mb-[6rem]"
+	>
 		<slot />
 	</div>
 </MainLayout>
