--- a/apps/web/src/components/modules/ArticleQuoteModule.astro
+++ b/apps/web/src/components/modules/ArticleQuoteModule.astro
@@ -17,12 +17,10 @@ if (!quote) return null;
 		<blockquote class="quote pb-[2rem]">
 			“{quote}”
 		</blockquote>
-	</ArticleLayout>
-	<MainLayout>
 		{
 			author && (
-				<>
-					<div class="col-span-1 md:col-start-4">
+				<div class="grid grid-cols-4 gap-[1rem]">
+					<div class="col-span-1">
 						<SanityImage
 							image={image}
 							alt={author}
@@ -35,8 +33,8 @@ if (!quote) return null;
 						<span class="font-bold">{author}</span>
 						{jobTitle && <p>{jobTitle}</p>}
 					</div>
-				</>
+				</div>
 			)
 		}
-	</MainLayout>
+	</ArticleLayout>
 </SectionLayout>
