--- a/apps/web/src/pages/[slug].astro
+++ b/apps/web/src/pages/[slug].astro
@@ -8,6 +8,7 @@ import ArticleTextModule from "@/components/modules/ArticleTextModule.astro";
 import AtAGlanceModule from "@/components/modules/AtAGlanceModule.astro";
 import CaseHighlightsModule from "@/components/modules/CaseHighlightsModule.astro";
 import HighlightsModule from "@/components/modules/HighlightsModule.astro";
+import HeroCase from "@/components/astro/HeroCase.astro";
 import NewsModule from "@/components/modules/NewsModule.astro";
 import SideBySideModule from "@/components/modules/SideBySideModule.astro";
 import PageLayout from "@/layouts/PageLayout.astro";
@@ -35,9 +36,8 @@ const { page } = Astro.props;
 ---
 
 <PageLayout title={page.title ?? undefined}>
-	<div
-		class="flex flex-col gap-y-[7.5rem] md:gap-y-[12.5rem] max-w-[100rem] mx-auto"
-	>
+	<div class="flex flex-col max-w-[100rem] mx-auto">
+		{page._type === "case" && <HeroCase {...page} />}
 		{
 			page.modules?.map((module) => {
 				switch (module._type) {
